; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_writebsp.c_EndModel.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/bspc/extr_writebsp.c_EndModel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64 }

@dmodels = common dso_local global %struct.TYPE_3__* null, align 8
@nummodels = common dso_local global i64 0, align 8
@numfaces = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @EndModel() #0 {
  %1 = alloca %struct.TYPE_3__*, align 8
  %2 = load %struct.TYPE_3__*, %struct.TYPE_3__** @dmodels, align 8
  %3 = load i64, i64* @nummodels, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i64 %3
  store %struct.TYPE_3__* %4, %struct.TYPE_3__** %1, align 8
  %5 = load i64, i64* @numfaces, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = sub nsw i64 %5, %8
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %1, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 1
  store i64 %9, i64* %11, align 8
  %12 = load i64, i64* @nummodels, align 8
  %13 = add i64 %12, 1
  store i64 %13, i64* @nummodels, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
